Fix falcon9 info background collapse (Zzz..)

--- a/public/css/textStyle.css
+++ b/public/css/textStyle.css
@@ -3,12 +3,14 @@
 .dm-stat-num {font-size: 3rem;}
 .dm-stat-title {font-size: 0.75rem;}
 .dm-text {font-size: 1rem; line-height: 32px;}
+.dm-title-2 {font-size: 2.25rem;}
 @media screen and (min-width: 768px) {
     .dm-title {font-size: 4rem;}
     .dm-subtitle {font-size: 1rem;}
     .dm-stat-num {font-size: 4rem;}
     .dm-stat-title {font-size: 0.8rem;}
     .dm-text {font-size: 1rem; line-height: 32px;}
+    .dm-title-2 {font-size: 2.25rem;}
 }
 @media screen and (min-width: 992px) {
     .dm-title {font-size: 6rem;}
@@ -16,4 +18,5 @@
     .dm-stat-num {font-size: 8rem;}
     .dm-stat-title {font-size: 1.4rem;}
     .dm-text {font-size: 1.25rem;line-height: 36px;}
+    .dm-title-2 {font-size: 3rem;}
 }
